--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/achatlocal
 spring.datasource.username=root
 spring.datasource.password=
+# Auto update database schema from entities
+spring.jpa.hibernate.ddl-auto=update
+# Server port config
+server.port = 8080
