--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/achatlocal
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Auto update database schema from entities
 spring.jpa.hibernate.ddl-auto= update
+# JWT Token config
+jwt.secret= rntaAchatLocal
+jwt.expirationDateInMs= 3600000
 # Server port config
 server.port = 8080
